--- a/src/app/lista-estudiantes/lista-estudiantes.component.html
+++ b/src/app/lista-estudiantes/lista-estudiantes.component.html
@@ -60,7 +60,7 @@
             <button mat-icon-button matTooltip="Editar estudiante" (click)="editarEstudiante(element.idEstudiante)">
               <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button matTooltip="Eliminar estudiante">
+            <button mat-icon-button matTooltip="Eliminar estudiante" (click)="eliminarEstudiante(element.idEstudiante)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
